# AILabs

./: Lab01_Setup.sh  Lab02_Setup.sh  Lab04_Setup.sh  Lab05_Setup.sh  LabTroubleShooting.docx
Lab01_PhishingDetectionModel/: PhishingDetection.ipynb
Lab02_Deepfakes/: deepfake_audio_detection.ipynb  pyproject.toml
Lab02_Deepfakes/deepfake_audio/: derek_fake_cosmo_quote_deepfake_analysis.json
Lab04_CyberThreatIntelTracking/: README.md  sample-report.html
Lab04_Log_Alert_Summarization/: pyproject.toml
Lab05_CyberThreatIntelTracking/: pyproject.toml
Lab05_Log_Alert_Summarization/: README.md
Lab0x_Deepfakes/: deepfake_audio_detection.ipynb
Lab0x_Deepfakes/deepfake_audio/: derek_fake_cosmo_quote_deepfake_analysis.json
PriorVersionMaterial/016_Fundamentals/: Linear_Regression.ipynb  PandasExample.ipynb  PhishingModel.ipynb
PriorVersionMaterial/022_LargeLanguageModels/: LAB_SFT_Counselor.ipynb  SFT_infotech.ipynb
PriorVersionMaterial/024_AdversarialAI/PyRIT/: Adversarial_AI_Intro.ipynb
PriorVersionMaterial/024_AdversarialAI/PyRIT/pyrit/common/: net_utility.py
