[tool.poetry]
name = "deepfake-audio-detection"
version = "0.1.0"
description = "A comprehensive toolkit for detecting deepfaked speech in audio files"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchaudio = "^2.0.0"
transformers = "^4.30.0"
librosa = "^0.10.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
audioread = "^3.0.0"
soundfile = "^0.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
notebook = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
