[project]
name = "lab05-log-alert-summarization"
version = "0.1.0"
description = ""
authors = [
    {name = "Joff Thyer",email = "joff@blackhillsinfosec.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.107.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
