[project]
name = "lab04-cyberthreatinteltracking"
version = "0.1.0"
description = ""
authors = [
    {name = "Joff Thyer",email = "joff@blackhillsinfosec.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "anthropic (>=0.69.0,<0.70.0)",
    "markdown (>=3.9,<4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "ipaddress (>=1.0.23,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
